--- a/Vue/09_监视属性/3_天气案例_深度监视.html
+++ b/Vue/09_监视属性/3_天气案例_深度监视.html
@@ -38,7 +38,7 @@
       },
       computed: {
         info() {
-          return this.isHot ? "Hot" : "Cold"; // 在这里要加上this，模板里调用isHot可以不用this
+          return this.isHot ? "Hot" : "Cold"; // 在这里要加上this，模板里调用isHot可以不用this、、、
         },
       },
       methods: {
