--- a/Vue/09_监视属性/2_天气案例_监视属性.html
+++ b/Vue/09_监视属性/2_天气案例_监视属性.html
@@ -9,7 +9,7 @@
   <body>
     <!--
       监视属性watch:
-        1. 当被监视的属性变化时，回调函数(handler)自动自动调用，进行相关操作
+        1. 当被监视的属性变化时，回调函数(handler)自动调用，进行相关操作
         2. 监视的属性必须存在，才能进行监视！
         3. 监视的两种写法:
           (1) new Vue时传入watch配置
