--- a/Vue/11_条件渲染/条件渲染.html
+++ b/Vue/11_条件渲染/条件渲染.html
@@ -27,10 +27,9 @@
       <h2>Current n value is {{n}}</h2>
       <button @click="n++">Click n + 1</button>
 
-      <!--v-show是Vue内置的 做条件渲染-->
+      <!--v-show做条件渲染-->
       <!-- <h1 v-show="false">Welcome to {{name}}</h1>  -->
       <!-- <h1 v-show="1 === 1">Welcome to {{name}}</h1>  -->
-      <!-- <h1 v-show="false">Welcome to {{name}}</h1>  -->
 
       <!--v-if做条件渲染-->
       <!-- <h1 v-if="false">Welcome to {{name}}</h1>  -->
@@ -40,7 +39,6 @@
       <!-- <div v-if="n === 1">Angular</div>
       <div v-else-if="n === 2">React</div>
       <div v-else-if="n === 3">Vue</div> -->
-      <!--n等于别的 都算haha-->
       <!-- <div v-else>haha</div> -->
 
       <!-- v-if and template的配合使用，只能用v-if，不能用v-show -->
@@ -49,9 +47,7 @@
         <h2>ryan</h2>
         <h2>Sydney</h2>
       </template>
-
     </div>
-
   </body>
 
   <script>
