--- a/Vue/10_绑定样式/绑定样式.html
+++ b/Vue/10_绑定样式/绑定样式.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="../js/vue.js"></script>
     <title>Document</title>
-    <style></style>
+    <style>
+      .basic {
+
+      }
+    </style>
   </head>
   <body>
     <div id="root">
-        <!-- 绑定class样式 -- 字符串写法，适用于: 样式的类名不确定，需要动态指定(一点就变化) -->
+      <!-- 绑定class样式 -- 字符串写法，适用于: 样式的类名不确定，需要动态指定(一点就变化) -->
       <div class="basic" :class="mood" @click="changeMood">{{name}}</div>
-
       <div class="basic" :class="arr">{{name}}</div>
     </div>
   </body>
@@ -25,8 +28,10 @@
       },
       methods: {
         changeMood() {
+          // 这样就是随机切换类型
             const arr = ['happy', 'sad', 'normal'];
-            const index = Math.floor(Math.random()*3); // Math.random()生成的是0到1，但不会生成1。乘以三那么就是0.xxx, 1.xxx, 2.xxx，不会是3开头。再向下取整就是0，1，2
+            // Math.random()生成的是0到1，但不会生成1。乘以三那么就是0.xxx, 1.xxx, 2.xxx，不会是3开头。再向下取整就是0，1，2
+            const index = Math.floor(Math.random()*3);
             this.mood = arr[index];
         },
       },
