JavaScript 第二阶段 内容更新

--- a/JavaScript/2_PhaseTwo/BOM/1_BOM/1_bom.html
+++ b/JavaScript/2_PhaseTwo/BOM/1_BOM/1_bom.html
@@ -6,11 +6,13 @@
 </head>
 <body>
 <script>
+    // 隐藏的'window.'的部份
     console.log(document === window.document);
     function fn() {
         console.log(11); 
     }
     fn();
+    // window.fn();
     var num = 10;
     console.log(window.num);
 </script>
