--- a/Vue/06_数据代理/1_回顾Object.defineProperty方法.html
+++ b/Vue/06_数据代理/1_回顾Object.defineProperty方法.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <script type="text/javascript" src="../js/vue.js"></script>
     <title>Title</title>
-</head>
-<body>
-<script>
-    let number = 18;
-    let person = {
-        name: '张三',
-        sex: 'Male',
+  </head>
+  <body>
+    <script>
+      let number = 18;
+      let person = {
+        name: "张三",
+        sex: "Male",
         // age: 18
-    }
+      };
 
-    /**
-     * 第一个参数 对象名
-     * 第二个参数 要添加的属性名
-     * 第三个参数 配置项
-     * 用下面的方法写 比用上面在对象里直接定义age: 18更高级一些，但是下面的方式默认是不可枚举的。
-     * 不可枚举的意思就是不参与遍历，定义了enumerable: true就变成可以枚举，参与遍历了。
-     * */
-    Object.defineProperty(person, 'age', {
+      /**
+       * 第一个参数 对象名
+       * 第二个参数 要添加的属性名
+       * 第三个参数 配置项
+       * 用下面的方法写 比用上面在对象里直接定义age: 18更高级一些，
+       * 但是下面的方式默认是不可枚举的。
+       * 
+       * 不可枚举的意思就是不参与遍历，定义了enumerable: true就变成可以枚举，参与遍历了。
+       * */
+      Object.defineProperty(person, "age", {
         // value: 18,
         // enumerable: true, // 控制属性是否可以枚举，默认值是false
         // writable: true, //控制属性是否可以被修改，默认值是false
@@ -29,17 +31,17 @@
 
         // 当有人读取person的age属性时，get函数(getter)就会被调用，且返回值就是age的值
         get: function () {
-            console.log('有人读取age属性了');
-            return number
+          console.log("有人读取age属性了");
+          return number;
         },
 
         // 当有人修改person的age属性时，set函数(setter)就会被调用，且会收到修改的age值
-        set(value) {
-            console.log('有人修改了age属性，且值是', value);
-            number = value;
-        }
-    })
-    console.log(person);
-</script>
-</body>
+        set: function (value) {
+          console.log("有人修改了age属性，且值是", value);
+          number = value;
+        },
+      });
+      console.log(person);
+    </script>
+  </body>
 </html>
