--- a/Vue/06_数据代理/2_何为数据代理.html
+++ b/Vue/06_数据代理/2_何为数据代理.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>何为数据代理</title>
-</head>
-<body>
-<!-- 数据代理: 通过一对象代理对另一个对象中属性的操作 (读/写) -->
-<script>
-    let obj = {x:100};
-    let obj2 = {y:200};
+  </head>
+  <body>
+    <!-- 数据代理: 通过一对象代理对另一个对象中属性的操作 (读/写) -->
+    <script>
+      let obj = { x: 100 };
+      let obj2 = { y: 200 };
 
-    Object.defineProperty(obj2, 'x', {
+      Object.defineProperty(obj2, "x", {
         get() {
-            return obj.x;
+          return obj.x;
         },
         set(value) {
-            obj.x = value;
-        }
-    })
-</script>
-</body>
+          obj.x = value;
+        },
+      });
+    </script>
+  </body>
 </html>
