--- a/Vue/12_列表渲染/7_模拟一个数据监测.html
+++ b/Vue/12_列表渲染/7_模拟一个数据监测.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
-<body>
-$END$
-</body>
+<body></body>
+
+<script type="text/javascript">
+    let data = {
+        name: 'front-end',
+        address: 'beijing'
+    }
+
+    const obs = new Observer(data);
+    console.log(obs)
+
+    // 准备一个vm实例对象
+    let vm = {};
+    vm._data = data = obs;
+
+    function Observer(obj) {
+        // 汇总对象中所有的属性形成一个数组
+        // Object.keys()用于返回一个对象自身的可枚举属性组成的数组
+        const keys = Object.keys(obj);
+        /**
+         * 遍历
+         *
+         * 因为Object.keys只能获得对象中的属性名，也就是keys数组，但是没法获得值，
+         * 所以必须要设置另一个属性来访问到各个keys所对应的属性值，这个k就是干这个用的
+         * */
+        keys.forEach((k) => {
+            Object.defineProperty(this, k, {
+                get() {
+                    return obj[k]
+                },
+                set(val) {
+                    console.log(`${k}被改了，我要去解析模板，生成虚拟DOM。。。我要开始忙了`)
+                    obj[k] = val;
+                }
+            })
+        })
+    }
+</script>
 </html>
