--- a/Vue/12_列表渲染/5_更新时的问题.html
+++ b/Vue/12_列表渲染/5_更新时的问题.html
@@ -34,8 +34,10 @@
                 // this.persons[0].name = '马老师' // 奏效
                 // this.persons[0].age = 50 // 奏效
                 // this.persons[0].sex = '男' // 奏效
+                // this.persons[0] = {id:'001', name: '马老师', age: 50, sex:'男'}
 
-                this.persons[0] = {id:'001', name: '马老师', age: 50, sex:'男'}
+                // 这样写可以替代上面的方法，这样写就奏效了。
+                this.persons.splice(0, 1, {id:'001', name: '马老师', age: 50, sex:'男'})
             }
         }
     })
