--- a/Vue/15_内置指令/3. v-cloak指令.html
+++ b/Vue/15_内置指令/3. v-cloak指令.html
@@ -6,6 +6,11 @@
     <script type="text/javascript" src="../js/vue.js"></script>
 </head>
 <body>
+<!--
+v-cloak指令 (没有值):
+    1. 本质是一个特殊属性，Vue实例创建完毕并接管容器后，会删掉v-cloak属性。
+    2. 使用css配合v-cloak可以解决网速慢时页面展示出{{xxx}}的问题。
+-->
 <div id="root">
     <h2>{{name}}</h2>
 </div>
